@@ -26,6 +26,7 @@
         <jacoco.version>0.8.13</jacoco.version>
         <jacoco.coverage.line.minimum>0.10</jacoco.coverage.line.minimum>
         <jacoco.coverage.branch.minimum>0.05</jacoco.coverage.branch.minimum>
+        <surefire.argLine/>
     </properties>
 
     <modules>
@@ -34,6 +35,7 @@
         <module>carwatch-application</module>
         <module>carwatch-infrastructure</module>
         <module>carwatch-web</module>
+        <module>carwatch-reports</module>
     </modules>
 
     <dependencyManagement>
@@ -60,6 +62,9 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${jacoco.version}</version>
+                    <configuration>
+                        <propertyName>surefire.argLine</propertyName>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>prepare-agent</id>
@@ -79,6 +84,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>@{surefire.argLine} -XX:+EnableDynamicAgentLoading --enable-native-access=ALL-UNNAMED</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -87,43 +95,6 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <inherited>false</inherited>
-                <executions>
-                    <execution>
-                        <id>aggregate-report</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report-aggregate</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>aggregate-check</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>LINE</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>${jacoco.coverage.line.minimum}</minimum>
-                                        </limit>
-                                        <limit>
-                                            <counter>BRANCH</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>${jacoco.coverage.branch.minimum}</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
